@@ -1,0 +1,36 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+    Licensed to the Apache Software Foundation (ASF) under one
+    or more contributor license agreements.  See the NOTICE file
+    distributed with this work for additional information
+    regarding copyright ownership.  The ASF licenses this file
+    to you under the Apache License, Version 2.0 (the
+    "License"); you may not use this file except in compliance
+    with the License.  You may obtain a copy of the License at
+
+    https://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing,
+    software distributed under the License is distributed on an
+    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+    KIND, either express or implied.  See the License for the
+    specific language governing permissions and limitations
+    under the License.
+-->
+<data-map xmlns="http://cayenne.apache.org/schema/10/modelMap"
+          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+          xsi:schemaLocation="http://cayenne.apache.org/schema/10/modelMap http://cayenne.apache.org/schema/10/modelMap.xsd"
+          project-version="10">
+    <dbImport xmlns="http://cayenne.apache.org/schema/10/dbimport">
+        <tableTypes>
+            <tableType>TABLE</tableType>
+        </tableTypes>
+        <forceDataMapCatalog>false</forceDataMapCatalog>
+        <forceDataMapSchema>false</forceDataMapSchema>
+        <namingStrategy>org.apache.cayenne.dbsync.naming.DefaultObjectNameGenerator</namingStrategy>
+        <skipPrimaryKeyLoading>false</skipPrimaryKeyLoading>
+        <skipRelationshipsLoading>false</skipRelationshipsLoading>
+        <useJava7Types>false</useJava7Types>
+        <usePrimitives>true</usePrimitives>
+    </dbImport>
+</data-map>
